--- a/vsoft-framework-context/src/main/resources/application.properties
+++ b/vsoft-framework-context/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 server.servlet.context-path=/
 
-
+logging.config=classpath:logback-spring.xml
 # ±‡¬Î∏Ò Ω
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
